test/visibility/only/badName.good
badName.chpl:13: error: Bad identifier in 'only' clause, no known 'd' defined in 'Foo'
